# multi_object_tracker

./: CMakeLists.txt  README.md  det_and_track.cpp  det_and_track.h  lk_tracker.cpp  lk_tracker.h  lk_tracker_test.cpp  main.cpp  munkres.cpp  munkres.h  object_detection.cpp  object_detection.h
